--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -39,7 +39,7 @@
             <input type="checkbox" id="about-toggle" class="toggle">
             <label for="about-toggle" class="btn btn-info">About</label>
             <div class="dropdown-content">
-                <p>
+                <p style="color: black;">
                     This project is a Spreadsheet model which you can access through in the sidebar. You can start typing contents of numbers,
                     words, and formulas in the highlighted cell directly which get evaluated in the the cell and in the value toolbar on top.
                     This Spreadsheet will add 4,000,000+ aura to your daily life as you embody the U's spirit in our school colors.
@@ -53,7 +53,7 @@
                 <input type="checkbox" id="HowTo-toggle" class="toggle">
                 <label for="HowTo-toggle" class="btn btn-info">How To Use</label>
                 <div class="dropdown-content">
-                    <p>
+                    <p style="color: black;">
                         To access our spreadsheet please click the spreadsheet button on the left sidebar upon loading into the spreadsheet you will 
                         be greeted with various options here's how to use each of our components: <br />
                         1. The spreadsheet works as any spreadsheet would! Go ahead and type things in either directly into each cell or in the contents
@@ -83,7 +83,7 @@
             <input type="checkbox" id="feature-toggle" class="toggle">
             <label for="feature-toggle" class="btn btn-secondary">Extra Features</label>
             <div class="dropdown-content">
-                <p>
+                <p style="color: black;">
                     The extra features we added include adding the ability to directly start typing values into the cells itself in the Spreadsheet.
                     We also added some GUI features which include adding the University's colors to our Spreadsheet model and adding a drop shadow
                     to filled out cells when you hover over them.<br />
@@ -105,10 +105,10 @@
             <input type="checkbox" id="lore-toggle" class="toggle">
             <label for="lore-toggle" class="btn btn-dark">Creators' Lore</label>
             <div class="dropdown-content">
-                <p>This project was put together by:</p>
+                <p style="color: black;">This project was put together by:</p>
                 <ul class="indented-list">
-                    <li>Joel Rodriguez: THE GOAT</li>
-                    <li>Nandhini Ramanathan: jus a gurl</li>
+                    <li style="color: black;">Joel Rodriguez: THE GOAT</li>
+                    <li style="color: black;">Nandhini Ramanathan: jus a gurl</li>
                 </ul>
             </div>
         </div>
@@ -144,7 +144,9 @@
         width: 100%;
         max-width: 1500px;
     }
-
+    .home-text{
+        color: black;
+    }
     .dropdown {
         position: relative;
         width: 100%;
