--- a/GUI.Client/Pages/SpreadsheetGUI.razor.css
+++ b/GUI.Client/Pages/SpreadsheetGUI.razor.css
@@ -26,7 +26,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
-/*    background-color: #ffffff !important;*/
+    /*    background-color: #ffffff !important;*/
     border-bottom: 2px solid black;
 }
 
@@ -34,7 +34,7 @@
     position: sticky;
     left: 0;
     z-index: 1;
-/*    background-color: #ff3333 !important;*/
+    /*    background-color: #ff3333 !important;*/
     border-right: 2px solid black;
 }
 
@@ -47,7 +47,7 @@
 
 #toolbar {
     display: flex;
-    border: 5px solid red;
+    border: 5px solid darkred;
     justify-content: space-around;
     align-items: center;
     padding: 10px 20px;
@@ -81,9 +81,9 @@
     margin: 20px;
 }
 
-#FileHandlers input {
-   margin: 10px;
-}
+    #FileHandlers input {
+        margin: 10px;
+    }
 
 .upload-container {
     position: relative;
@@ -99,20 +99,24 @@
 }
 
 #FileMenu {
-    border: 1px solid black;
+    border: 3px solid darkred;
     margin-top: 10px;
 }
 
+.body {
+    background-color: black; /* Replace with your desired color */
+}
+
 .colored-spreadsheet {
-    background: linear-gradient(to right, #ff6666, #ff3333, #ff0000);
-    border: 4px solid white;
+    background: linear-gradient(135deg, #8B0000, #B22222, #A52A2A);
+    border: 4px solid darkred;
     padding: 30px;
     border-radius: 40px;
 }
 
     .colored-spreadsheet table {
-/*        background-color: #ffeeda;*/
-          background-color: white;
+        /*        background-color: #ffeeda;*/
+        background-color: white;
     }
 
     .colored-spreadsheet th, .colored-spreadsheet td {
@@ -127,9 +131,9 @@
         font-weight: bold;
     }
 
-.colored-spreadsheet td.selected {
-    border: 3px solid #6D071A;
-}
+    .colored-spreadsheet td.selected {
+        border: 3px solid #6D071A;
+    }
 
 .SpreadsheetCell:hover {
     background-color: rgba(255, 255, 255, 0.3);
