--- a/GUI/wwwroot/app.css
+++ b/GUI/wwwroot/app.css
@@ -1,5 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: white;
 }
 
 a, .btn-link {
@@ -8,8 +9,8 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #c21b1b;
+    border-color: #c21b1b;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -18,6 +19,7 @@ a, .btn-link {
 
 .content {
     padding-top: 1.1rem;
+    background-color: #333333;
 }
 
 h1:focus {
