Updated some home page and readme's removed useless code from blazor files.

--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -124,6 +124,9 @@
                     We noticed that the website looks different on different machines, this is because Professor De St Germaine used px as a unit for defining the size of components instead of
                     vw and vh. We chose not to change this because this would require a lot of time (finding all components and figuring out how to convert to vw and vh). Please just use
                     a zoom percentage which seems right.
+                    <br />
+                    We also noticed that stylecop is giving a warning in mangage nuget dependencies. This is how it came with the starter code so we did not fix it as we assumed it was needed.
+
 
                 </p>
                 
