Updated Home Page with additional features.

--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -90,11 +90,11 @@
 					to filled out cells when you hover over them.<br />
 					2. Functionality to name your spreadsheet has also been added. Upon loading your sprd file the name that it was given will also be
 					loaded into the name input box. Illegal names are not allowed and are handled correctly.<br />
-					Upon changing column/row numbers if a cell referenced a cell which no longer is visible the value for the cell (in the view only )
+					3.Upon changing column/row numbers if a cell referenced a cell which no longer is visible the value for the cell (in the view only )
 					changes to an Evaluation Error. Upon bringing the cell back by changing row/col number back the cells value is reverted to its
 					original value! <br />
-					3. Major styling changes.  <br />
-					4. Added functunality for when spreadsheet loads that its size changes to the minimum size it needs to be (min 10 x 10) For example if loaded spreadsheet
+					4. Major styling changes.  <br />
+					5. Added functunality for when spreadsheet loads that its size changes to the minimum size it needs to be (min 10 x 10) For example if loaded spreadsheet
 					has a cell at Z100 filled out then the spreadsheet will load in at being 100x100. If there is no cell outside of the default 10x10 then the size loaded is
 					10x10. <br />
 					We attempted to add the following: <br />
