Changed website title.

--- a/GUI.Client/Pages/SpreadsheetGUI.razor
+++ b/GUI.Client/Pages/SpreadsheetGUI.razor
@@ -36,7 +36,7 @@
 <NavigationLock ConfirmExternalNavigation="true"
 				OnBeforeInternalNavigation="OnBeforeLeavePage" />
 
-<PageTitle>Starter Code</PageTitle>
+<PageTitle>Spreadsheet</PageTitle>
 @* // <remarks> Displays the header with an * if the spreadsheet has unsaved changes. </remarks> *@
 
 <h1>Simple SpreadSheet GUI @(spreadsheet.Changed ? "*" : "")</h1>
